# sqil-core

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scripts.py
.github/workflows/: docs.yml  main.yml  publish.yaml  publish.yml  release.yml
API reference/experiment/analysis/: index.html
API reference/experiment/handler/: index.html
API reference/experiment/instruments/: index.html
API reference/fit/core/: index.html
Notebooks/exp_quick_start/: index.html
Notebooks/fit_input_decorator/: index.html
Notebooks/fit_output_decorator/: index.html
Notebooks/resonator_fit/: index.html
docs/: index.md
docs/Notebooks/: exp_quick_start.ipynb  fit_input_decorator.ipynb  fit_output_decorator.ipynb  resonator_fit.ipynb
search/: search_index.json
sketching/: kit.ipynb  resonator.py  takethree.ipynb  taketo.ipynb  taketwo.ipynb
sqil_core/: __init__.py  config.py  config_log.py
sqil_core/experiment/: __init__.py  _analysis.py  _events.py  _experiment.py  _utils.py  instruments_setup.py  lo_event_handler.py  setup_registry.py
sqil_core/fit/: __init__.py  _core.py  _fit.py  _guess.py  _models.py  _quality.py  core.py  fit.py  models.py
sqil_core/measurement/: __init__.py  _experiment.py
sqil_core/resonator/: __init__.py  _resonator.py  resonator.py
sqil_core/utils/: __init__.py  _analysis.py  _const.py  _formatter.py  _plot.py  _read.py  _utils.py  analysis.py  const.py  formatter.py  read.py
tests/experiment/: test_integration_experiment.py  test_local_oscillator.py  test_sweep.py
tests/fit/: test_core.py  test_fit.py  test_fit_input_decorator.py  test_fit_output_decorators.py  test_guess.py  test_quality.py  test_transform.py
tests/resonator/: test_resonator.py
tests/utils/: test_analysis.py  test_formatter.py  test_read.py  test_utils.py
(+41 files in other folders)
