[tool.poetry]
name = "sqil-core"
version = "1.1.0"
description = "The codebase of the SQIL group in EPFL"
authors = ["Andrea Duina"]
readme = "README.md"

[tool.poetry.scripts]
build = "scripts:build"
docs-dev = "scripts:docs_dev"
docs-build = "scripts:docs_build"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
scipy = "^1.14.1"
h5py = "^3.12.1"
matplotlib = "^3.9.3"
isort = "5.9.3"
tabulate = "^0.9.0"
numpy = "^2.2.3"
lmfit = "^1.3.2"
pyro5 = "^5.15"
qcodes = "^0.51.0"
qcodes-contrib-drivers = "^0.23.0"
blinker = "^1.9.0"
plottr = "^0.14.0"
mpld3 = "^0.5.10"
laboneq = "^2.57.0"
laboneq-applications = "^2.11.0"
ruff = "^0.12.9"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.48"
mkdocstrings-python = "^1.12.2"
pytest = "^8.3.4"
mkdocs-jupyter = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.black]
# line-length = 88
# target-version = ["py310"]
# exclude = '''
# /(
#     \.git
#     | \.venv
#     | build
#     | dist
# )/
# '''

# [tool.isort]
# profile = "black"
# known_first_party = ["sqil-core"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git", ".venv", "build", "dist", "*.ipynb",
    "sqil_core/experiment/instruments/drivers/SignalCore_SC5511A.py",
    "sqil_core/experiment/data/plottr.py"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
select = ["F", "E", "Q", "I", "B", "W"]
ignore = ["COM812", "ISC001"]
extend-select = []

[tool.ruff.lint.isort]
known-first-party = ["sqil-core"]
combine-as-imports = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 1000